@@ -1507,5 +1507,19 @@
         </td>
       </tr>
     </table>
+    <p>
+      <small>
+        This documentation was produced with the CLFSWM auto-doc functions. To reproduce it, use the produce-doc-html-in-file or
+the produce-all-docs function from the Lisp REPL.
+      </small>
+    </p>
+    <p>
+      <small>
+        Something like this:<br>
+LISP> (in-package :clfswm)<br>
+CLFSWM> (produce-doc-html-in-file "my-keys.html")<br>
+or<br> CLFSWM> (produce-all-docs)
+      </small>
+    </p>
   </body>
 </html>
